# Archimedean-screw

./: CMakeLists.txt  LICENSE  README.md  lcd.c  lcd.h  main.c
